# sample-order-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  exceptions.py  main.py
app/models/: order.py
app/routers/: health.py  orders.py
app/schemas/: order.py
app/services/: order_service.py
docs/adr/: ADR-001-order-status-fsm.md
